# fast-fluid-simulation

./: .gitignore  CMakeLists.txt  README.md  euler_quickstart.txt
2D_C/: 2DLBM.c  measure2D.c
2d_optimization/: baseline.py
baseline/2d/: latticeboltzmann.py
baseline/3d/LBM-master/: scalar_index.m  visualise.m  visualise_density.m
implementation/2d/: CMakeLists.txt  README.md  lbm2d.c  main.cpp  utils.h  validate_baseline.cpp
implementation/2d/py_baseline/: baseline_cstyle.py  latticeboltzmann.py
implementation/3d/: CMakeLists.txt  README.md  options.json
implementation/3d/b/: plot.ipynb
implementation/3d/clib/headers/: CMakeLists.txt  LBM.h  LBMFunctions.h  collision.h  momentum.h  timing.h  utils.h
implementation/3d/clib/headers/stream/: couette.h  lees_edwards.h  periodic.h
implementation/3d/clib/source/: CMakeLists.txt  LBM.c  LBMarrays.c  LBMbaseline.c  LBMstruct.c  collision.c  measurement.c  momentum.c
implementation/3d/clib/source/stream/: lees_edwards.c  periodic.c
implementation/3d/cmdline/: main.cpp  timing.cpp
implementation/3d/lib/headers/: CMakeLists.txt  output.hpp
implementation/3d/lib/source/: CMakeLists.txt  output.cpp
implementation/3d/plotting/: plot.ipynb  roofline.py  roofline_example.ipynb  run.sh
include/2d/: 2D_apply_bndry.h  2D_collision.h  2D_drift.h  2D_set_reflective_bndry.h  lbm2d_struct.h  utils2d.h
include/3d/: LBM.h  LBMFunctions.h  collision.h  momentum.h  timing.h  utils.h
include/3d/stream/: couette.h  lees_edwards.h  periodic.h
scripts/2d/: latticeboltzmann.py  testing.cpp  testing_struct.cpp  timing.cpp  timing_struct.cpp  validate_baseline.cpp
scripts/2d/archive/: baseline_cstyle.py
scripts/3d/: main.cpp  timing.cpp
src/2d/: lbm2d_baseline.c
src/2d/struct/: 2D_apply_bndry.c  2D_collision.c  2D_drift.c  2D_set_reflective_bndry.c  lbm2d_struct.c
src/3d/: LBM.c  collision.c  collision_b.c  momentum.c
src/3d/stream/: couette.c  lees_edwards.c  periodic.c
visualization/: README.md  TimingData.csv  TimingData_performance.csv  TimingData_roofline.csv  plot2d.ipynb  plotPerformanceNew.ipynb  roofline.py  roofline_example.ipynb  run.sh
visualization/bottleneckplots/Plots with new data/: bottleneck.ipynb
visualization/initialplotting/: run.sh
visualization/notebooks/: roofline.ipynb  runtime.ipynb
visualization/performanceplots/: TimingData1.csv  performance.ipynb
visualization/rooflineplots/: roofline.ipynb
visualization/runtimeplots/: TimingData.csv  TimingData2.csv
